packages/next-swc/crates/next-custom-transforms/tests/errors/next-font-loaders/options-object/output.js
import a from '@next/font/google/target.css?{"path":"pages/test.tsx","import":"ABeeZee","arguments":[{}],"variableName":"a"}';
import a from '@next/font/google/target.css?{"path":"pages/test.tsx","import":"ABeeZee","arguments":[{}],"variableName":"a"}';
import a from '@next/font/google/target.css?{"path":"pages/test.tsx","import":"ABeeZee","arguments":[{}],"variableName":"a"}';
import a from '@next/font/google/target.css?{"path":"pages/test.tsx","import":"ABeeZee","arguments":[{}],"variableName":"a"}';
const a = fn({
    10: 'hello'
});
const a = fn({
    variant: [
        i1
    ]
});
const a = fn({
    variant: ()=>{}
});
const a = fn({
    ...{}
});
